--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,11 +1,19 @@
 pipeline {
   agent {
-    docker { image 'node:16-alpine' }
+    docker {
+      image 'openjdk:16-jdk-alpine'
+      args '--rm=true'
+    }
   }
   stages {
-    stage('Test') {
+    stage('Build') {
       steps {
-        sh 'node --version'
+        sh 'javac HelloWorld.java'
+      }
+    }
+    stage('Run') {
+      steps {
+        sh 'java HelloWorld'
       }
     }
   }
