--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,19 +1,12 @@
+
 pipeline {
   agent {
-    docker {
-      image 'openjdk:16-jdk-alpine'
-      args '--rm=true'
-    }
+    docker { image 'node:16-alpine' }
   }
   stages {
-    stage('Build') {
+    stage('Test') {
       steps {
-        sh 'javac HelloWorld.java'
-      }
-    }
-    stage('Run') {
-      steps {
-        sh 'java HelloWorld'
+        sh 'node --version'
       }
     }
   }
